Chart JS demo added to chartjs branch

--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         <li>Voted</li>
       </ol>  
     </div>
+    <section>
+      <canvas id="myChart"></canvas>
+    </section>
   </div>
   <script src="./js/products.js"></script>
 </body>
